# WiVRn

./: .clang-format  .gitignore  AGENTS.md  AndroidManifest.xml  CMakeLists.txt  CMakePresets.json  README.md  build.gradle  flake.nix  monado-rev  ruff.toml  wivrn-dashboard.qrc
client/: CMakeLists.txt  application.cpp  application.h  asset.cpp  asset.h  configuration.cpp  configuration.h  constants.h  file_downloader.cpp  file_downloader.h  file_picker.cpp  file_picker.h  hardware.cpp  hardware.h  hmd_traits.cpp  hmd_traits.h  jnipp.h  libcurl.cpp  libcurl.h  main.cpp  scene.cpp  scene.h  vk_mem_alloc.cpp  wifi_lock.cpp  wifi_lock.h  wivrn_client.cpp  wivrn_client.h  wivrn_discover.cpp  wivrn_discover.h
client/android/: battery.cpp  battery.h  exported_symbols.txt  hid.cpp  hid.h  intent.cpp  intent.h  jnipp.cpp  jnipp.h  permissions.cpp  permissions.h
client/audio/: audio.h
client/decoder/: decoder.cpp  decoder.h  raw_decoder.cpp  raw_decoder.h  shard_accumulator.cpp  shard_accumulator.h
client/java/: BroadcastReceiver.java  MainActivity.java
client/locale/: it.po  wivrn.po
client/pico_native/: AndroidManifest.xml  CMakeLists.txt  README.md  build.gradle  main.cpp  pico_audio.cpp  pico_audio.h  pico_blit.cpp  pico_blit.h  pico_decoder.cpp  pico_decoder.h  wivrn_client_pico.cpp  wivrn_client_pico.h
client/render/: animation.cpp  animation.h  gpu_buffer.h  growable_descriptor_pool.cpp  growable_descriptor_pool.h  image_loader.cpp  image_loader.h  image_writer.cpp  image_writer.h  imgui_impl.cpp  imgui_impl.h  scene_components.cpp  scene_components.h  scene_data.cpp  scene_data.h  scene_loader.cpp  scene_loader.h  scene_renderer.cpp  scene_renderer.h  text_rasterizer.cpp  text_rasterizer.h  ui_theme.cpp  ui_theme.h  ui_widgets.cpp  ui_widgets.h  vertex_layout.h
client/scenes/: app_launcher.cpp  app_launcher.h  blitter.cpp  blitter.h  gui_common.cpp  gui_common.h  gui_settings.cpp  gui_settings.h  hand_model.cpp  hand_model.h  input_profile.cpp  input_profile.h  lobby.cpp  lobby.h  lobby_gui.cpp  lobby_gui_components.cpp  lobby_gui_customize.cpp  lobby_gui_settings.cpp  lobby_gui_theme.cpp  lobby_keyboard.cpp  lobby_keyboard.h  stream.cpp  stream.h  stream_actions.cpp  stream_defoveator.cpp  stream_defoveator.h  stream_gui.cpp  stream_network.cpp  stream_reprojection.cpp  stream_reprojection.h  stream_stats.cpp  stream_tracking.cpp
client/shaders/: common.glsl.inc  debug_draw.glsl  lit.frag.glsl  lit.glsl  lit.vert.glsl  lit_mask.frag.glsl  lit_skinned.vert.glsl  pbr.glsl.inc  ray.frag.glsl  ray.vert.glsl  ray_common.glsl.inc  ray_htc.frag.glsl  ray_htc.vert.glsl  ray_skinned.vert.glsl  ray_skinned_htc.vert.glsl  reprojection.glsl  reprojection.glsl.inc  reprojection_sgsr.frag.glsl  reprojection_vsr.glsl  stream.glsl  unlit.glsl
client/src/: .clang-format  scene.cpp  wivrn_client.cpp  wivrn_packets.h  wivrn_sockets.cpp
client/utils/: alignment.h  async.h  backtrace.cpp  backtrace.h  cache.h  check.h  class_from_member.h  contains.h  files.cpp  files.h  fmt_glm.h  glm_cast.h  handle.h  i18n.cpp  i18n.h  imgui_utils.cpp  imgui_utils.h  json_string.cpp  json_string.h  magic_hash.h  mapped_file.cpp  mapped_file.h  ranges.h  strings.cpp  typename.h
client/vk/: allocation.cpp  allocation.h  buffer.h  buffer_view.cpp  device_memory.h  error_category.cpp  fwd.h  pipeline.cpp  pipeline.h  pipeline_layout.cpp  renderdoc.cpp  renderdoc.h  shader.cpp  shader.h  vk.h  vk_allocator.cpp  vk_allocator.h
client/xr/: actionset.cpp  actionset.h  android_face_tracker.cpp  android_face_tracker.h  body_tracker.cpp  body_tracker.h  check.h  error_category.cpp  face_tracker.cpp  face_tracker.h  fb_body_tracker.cpp  fb_body_tracker.h  fb_face_tracker2.cpp  fb_face_tracker2.h  foveation_profile.cpp  foveation_profile.h  hand_tracker.cpp  hand_tracker.h  htc_body_tracker.cpp  htc_body_tracker.h  htc_face_tracker.cpp  htc_face_tracker.h  htc_xr_tracker.cpp  htc_xr_tracker.h  instance.cpp  instance.h  passthrough.cpp  passthrough.h  pico_body_tracker.cpp  pico_body_tracker.h  pico_face_tracker.cpp  pico_face_tracker.h  session.cpp  session.h  space.h  swapchain.cpp  swapchain.h  system.cpp  system.h  xr.h
common/: CMakeLists.txt  application.cpp  application.h  crypto.cpp  crypto.h  exit_codes.h  hand_kinematics.cpp  hand_kinematics.h  packed_quaternion.h  protocol_version.h  secrets.cpp  secrets.h  smp.cpp  smp.h  test_application.cpp  version.cpp.in  version.h  wivrn_config.h.in  wivrn_packets.h  wivrn_serialization.h  wivrn_serialization_types.h  wivrn_serialization_ut.cpp  wivrn_sockets.cpp  wivrn_sockets.h
common/pyrowave/: CMakeLists.txt  pyrowave_common.cpp  pyrowave_common.h  pyrowave_decoder.cpp  pyrowave_decoder.h  pyrowave_encoder.cpp  pyrowave_encoder.h
dashboard/: CMakeLists.txt  adb.cpp  adb.h  apk_installer.cpp  apk_installer.h  apps.cpp  apps.h  avahi.cpp  avahi.h  dashboard_utils.cpp  dashboard_utils.h  escape_sandbox.h  escape_string.h  firewall.cpp  firewall.h  gui_config.h.in  io.github.wivrn.wivrn.desktop.in  io.github.wivrn.wivrn.metainfo.xml  main.cpp  main_window.cpp  main_window.h  main_window.ui  manage_headsets.cpp  manage_headsets.h  manage_headsets.ui  rectangle_partitionner.cpp  rectangle_partitionner.h  settings.cpp  settings.h  settings.ui  steam.cpp  steam.h  steam_app.cpp  steam_app.h  steam_apps.cpp  steam_apps.h  version.cpp.in  version.h  vulkan_info.cpp  vulkan_info.h  (+8 more)
dashboard-qml/: .gitignore  CMakeLists.txt  escape_string.cpp  escape_string.h  gui_config.h.in  main.cpp  settings.cpp  settings.h  steam_apps.h  wivrn_qdbus_types.cpp  wivrn_server.cpp  wivrn_server.h
server/: CMakeLists.txt  accept_connection.cpp  accept_connection.h  active_runtime.cpp  active_runtime.h  avahi_publisher.cpp  avahi_publisher.h  hostname-sd.cpp  hostname.cpp  hostname.h  ipc_server_cb.cpp  ipc_server_cb.h  main.cpp  pidfd.h  sleep_inhibitor.cpp  sleep_inhibitor.h  start_application.cpp  start_application.h  start_systemd_unit.cpp  start_systemd_unit.h  target_instance_wivrn.cpp  target_instance_wivrn.h  u_git_tag.cpp.in  wivrn_ipc.cpp  wivrn_ipc.h
(+578 files in other folders)
